--- a/customer-service-api/src/main/resources/application.properties
+++ b/customer-service-api/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.jpa.show-sql=true
 application.jwt.secretKey=asdjklkeujrncolejmlxkfdsalfmjklsdkjmflsdjmxlsdjmx
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=10
+
+
+
+
+#=============================
+order.service.url=http://localhost:8004
