fix dependancy problems

--- a/order-service-api/src/main/resources/application.properties
+++ b/order-service-api/src/main/resources/application.properties
@@ -19,3 +19,18 @@ spring.jpa.show-sql=true
 application.jwt.secretKey=asdjklkeujrncolejmlxkfdsalfmjklsdkjmflsdjmxlsdjmx
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=10
+
+
+logging.level.com.netflix.eureka=INFO
+
+
+
+
+#eureka server
+
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
+
