--- a/customer-service-api/src/main/resources/application.properties
+++ b/customer-service-api/src/main/resources/application.properties
@@ -24,3 +24,8 @@ application.jwt.tokenExpirationAfterDays=10
 
 #=============================
 order.service.url=http://localhost:8004
+
+
+#eureka server
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
